[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
